fixed the text in the table

--- a/fitness-and-health-website/nutrition.html
+++ b/fitness-and-health-website/nutrition.html
@@ -58,7 +58,6 @@
 </section>
 
 
-
 <div class="container mt-5">
     <div class="row">
         <!-- Left Column with Form -->
@@ -151,27 +150,27 @@
                 <div class="card-body bg-dark text-light">
                     <h5 class="card-title" style="color: #A2D2FF; margin-right: 2%">Beispielhafte Mahlzeiten</h5>
                     <div class="table-responsive" style="overflow-x: auto;">
-                        <table class="table table-dark table-striped m-0">
+                        <table class="table table-dark table-striped m-0" style="table-layout: auto; width: 100%;">
                             <thead>
                             <tr>
-                                <th>Mahlzeit</th>
-                                <th>Beispiel</th>
-                                <th>Hinweis</th>
+                                <th style="white-space: nowrap;">Mahlzeit</th>
+                                <th style="white-space: nowrap;">Beispiel</th>
+                                <th style="white-space: nowrap;">Hinweis</th>
                             </tr>
                             </thead>
                             <tbody>
                             <tr>
-                                <td>Frühstück</td>
+                                <td style="white-space: nowrap;">Frühstück</td>
                                 <td>Haferbrei mit Mandeln und Beeren</td>
                                 <td>Haferflocken haben einen niedrigen GI und bieten langanhaltende Energie.</td>
                             </tr>
                             <tr>
-                                <td>Mittagessen</td>
+                                <td style="white-space: nowrap;">Mittagessen</td>
                                 <td>Gegrilltes Hähnchen mit Quinoa und Gemüse</td>
                                 <td>Quinoa ist eine ausgezeichnete Quelle für komplexe Kohlenhydrate und Ballaststoffe.</td>
                             </tr>
                             <tr>
-                                <td>Abendessen</td>
+                                <td style="white-space: nowrap;">Abendessen</td>
                                 <td>Gebratener Lachs mit Zucchini-Nudeln</td>
                                 <td>Omega-3-Fettsäuren im Lachs unterstützen die Herzgesundheit.</td>
                             </tr>
@@ -198,24 +197,24 @@
                         <table class="table table-dark table-striped m-0">
                             <thead>
                             <tr>
-                                <th>Mahlzeit</th>
-                                <th>Beispiel</th>
-                                <th>Hinweis</th>
+                                <th style="white-space: nowrap;">Mahlzeit</th>
+                                <th style="white-space: nowrap;">Beispiel</th>
+                                <th style="white-space: nowrap;">Hinweis</th>
                             </tr>
                             </thead>
                             <tbody>
                             <tr>
-                                <td>Frühstück</td>
-                                <td>Griechischer Joghurt mit Chiasamen und Beeren</td>
+                                <td style="white-space: nowrap;">Frühstück</td>
+                                <td >Griechischer Joghurt mit Chiasamen und Beeren</td>
                                 <td>Eine hervorragende Quelle für Protein und Ballaststoffe.</td>
                             </tr>
                             <tr>
-                                <td>Mittagessen</td>
+                                <td style="white-space: nowrap;">Mittagessen</td>
                                 <td>Linsensuppe mit Vollkornbrot</td>
                                 <td>Linsen bieten nicht nur Ballaststoffe, sondern auch pflanzliches Eiweiß.</td>
                             </tr>
                             <tr>
-                                <td>Abendessen</td>
+                                <td style="white-space: nowrap;">Abendessen</td>
                                 <td>Süßkartoffeln mit Kräuterquark</td>
                                 <td>Süßkartoffeln sind reich an Vitamin A und Quark liefert Kalzium für die Knochenstärkung.</td>
                             </tr>
@@ -242,24 +241,24 @@
                         <table class="table table-dark table-striped m-0">
                             <thead>
                             <tr>
-                                <th>Mahlzeit</th>
-                                <th>Beispiel</th>
-                                <th>Hinweis</th>
+                                <th style="white-space: nowrap;">Mahlzeit</th>
+                                <th style="white-space: nowrap;">Beispiel</th>
+                                <th style="white-space: nowrap;">Hinweis</th>
                             </tr>
                             </thead>
                             <tbody>
                             <tr>
-                                <td>Frühstück</td>
+                                <td style="white-space: nowrap;">Frühstück</td>
                                 <td>Vollkornbrot mit Avocado und Tomaten</td>
                                 <td>Avocados sind reich an Kalium und helfen, den Blutdruck zu senken.</td>
                             </tr>
                             <tr>
-                                <td>Mittagessen</td>
+                                <td style="white-space: nowrap;">Mittagessen</td>
                                 <td>Gegrilltes Hähnchen mit grünem Salat und Olivenöl</td>
                                 <td>Olivenöl enthält einfach ungesättigte Fettsäuren, die gut für das Herz sind.</td>
                             </tr>
                             <tr>
-                                <td>Abendessen</td>
+                                <td style="white-space: nowrap;">Abendessen</td>
                                 <td>Gedünsteter Fisch mit Brokkoli und Süßkartoffeln</td>
                                 <td>Brokkoli liefert Kalzium, das zur Blutdruckregulation beiträgt.</td>
                             </tr>
