--- a/fitness-and-health-website/trainings-plan.html
+++ b/fitness-and-health-website/trainings-plan.html
@@ -3,18 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Trainingspläne</title>
-    <meta name=viewport content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="stylesheet-training-plans.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <!-- Sticky Top Bar -->
-<nav class="navbar navbar-expand-lg navbar-dark navbar-fixed" style = "background-color: black" >
+<nav class="navbar navbar-expand-lg navbar-dark navbar-fixed" style="background-color: black;">
     <div class="container-fluid">
-
         <img src="icones/new-logo-gredient.png" alt="Home" width="50" height="50">
-
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -22,11 +20,11 @@
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="index.html">
-                        <img src="icones/bxs-home.svg" class = "changeColor" alt="Shop" width="20" height="20"> Home
+                        <img src="icones/bxs-home.svg" class="changeColor" alt="Shop" width="20" height="20"> Home
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link textInNavBar"  href="shop.html">
+                    <a class="nav-link textInNavBar" href="shop.html">
                         <img src="icones/bx-shopping-bag.svg" class="changeColor" alt="Shop" width="20" height="20"> Produkte
                     </a>
                 </li>
@@ -42,7 +40,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="about-us.html">
-                        <img src="icones/bxs-group.svg"  class="changeColor" alt="Über uns" width="20" height="20"> Über uns
+                        <img src="icones/bxs-group.svg" class="changeColor" alt="Über uns" width="20" height="20"> Über uns
                     </a>
                 </li>
             </ul>
@@ -50,41 +48,45 @@
     </div>
 </nav>
 
-<div class="content" style="clear: left">
-    <header class="hero">
+<div class="container mt-5 pt-5">
+    <!-- Header Section -->
+    <header class="hero text-center">
         <h1>Trainingspläne</h1>
-        <p>Individuelle Trainingspläne für ältere Menschen und Personen mit Beeinträchtigungen, um Gesundheit und
-            Wohlbefinden zu fördern.</p>
+        <p class="lead">Individuelle Trainingspläne für ältere Menschen und Personen mit Beeinträchtigungen, um Gesundheit und Wohlbefinden zu fördern.</p>
     </header>
+
+    <!-- Main Content -->
     <main>
-        <section class="plans">
-            <h2>Pläne für ältere Menschen</h2>
-            <p>Sanfte Übungen, um Mobilität, Kraft und Wohlbefinden zu verbessern:</p>
-            <ul>
-                <li><strong>Gelenkfreundliches Training:</strong> Schonende Bewegungen, um die Gelenke zu entlasten.
-                </li>
-                <li><strong>Balance-Übungen:</strong> Fördert die Standfestigkeit und Sturzprophylaxe.</li>
-                <li><strong>Leichtes Krafttraining:</strong> Unterstützt den Erhalt der Muskelgesundheit.</li>
-            </ul>
-        </section>
-        <section class="plans">
-            <h2>Pläne für beeinträchtigte Menschen</h2>
-            <p>Individuell angepasste Übungen, die verschiedene Einschränkungen berücksichtigen:</p>
-            <ul>
-                <li><strong>Stuhlübungen:</strong> Übungen, die im Sitzen durchgeführt werden können.</li>
-                <li><strong>Mobilitätstraining:</strong> Hilft, die Bewegungsfreiheit zu verbessern.</li>
-                <li><strong>Individuelle Anpassungen:</strong> Programme, die speziell auf die Bedürfnisse abgestimmt
-                    sind.
-                </li>
-            </ul>
+        <section class="plans mb-5">
+            <div class="row">
+                <div class="col-md-6">
+                    <h2>Pläne für ältere Menschen</h2>
+                    <p>Sanfte Übungen, um Mobilität, Kraft und Wohlbefinden zu verbessern:</p>
+                    <ul>
+                        <li><strong>Gelenkfreundliches Training:</strong> Schonende Bewegungen, um die Gelenke zu entlasten.</li>
+                        <li><strong>Balance-Übungen:</strong> Fördert die Standfestigkeit und Sturzprophylaxe.</li>
+                        <li><strong>Leichtes Krafttraining:</strong> Unterstützt den Erhalt der Muskelgesundheit.</li>
+                    </ul>
+                </div>
+                <div class="col-md-6">
+                    <h2>Pläne für beeinträchtigte Menschen</h2>
+                    <p>Individuelle Übungen, die verschiedene Einschränkungen berücksichtigen:</p>
+                    <ul>
+                        <li><strong>Stuhlübungen:</strong> Übungen, die im Sitzen durchgeführt werden können.</li>
+                        <li><strong>Mobilitätstraining:</strong> Hilft, die Bewegungsfreiheit zu verbessern.</li>
+                        <li><strong>Individuelle Anpassungen:</strong> Programme, die speziell auf die Bedürfnisse abgestimmt sind.</li>
+                    </ul>
+                </div>
+            </div>
         </section>
     </main>
 </div>
-<div class="container m-3">
+
+<div class="container mt-5">
     <div class="row justify-content-center">
-        <!-- Erste Karte -->
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-3 margin-good">
-            <div class="card">
+        <!-- Cards Section -->
+        <div class="col-12 col-md-6 mb-3">
+            <div class="card w-100">
                 <div class="card-body">
                     <h5 class="card-title">Beeinträchtigte</h5>
                     <p class="card-text">Link zu den Trainingsplänen</p>
@@ -92,10 +94,9 @@
                 </div>
             </div>
         </div>
-        <!-- Zweite Karte -->
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-3 margin-good">
-            <div class="card">
-                <div class="card-body" >
+        <div class="col-12 col-md-6 mb-3">
+            <div class="card w-100">
+                <div class="card-body">
                     <h5 class="card-title">Ältere</h5>
                     <p class="card-text">Link zu den Trainingsplänen</p>
                     <a href="trainings-plan-old.html" class="btn btn-primary">Entdecke mehr</a>
@@ -105,16 +106,11 @@
     </div>
 </div>
 
-
-
-
-<div class="explanation">
+<div class="container explanation">
     <h2>Wieso Pläne für Ältere und Beeinträchtigte?</h2>
-    <p>Die Bedürfnisse älterer Menschen und beeinträchtigter Personen unterscheiden sich häufig von denen jüngerer oder
-        gesunder Personen. Individuelle Trainingspläne helfen dabei, Mobilität, Kraft und Lebensqualität zu fördern,
-        während Verletzungen und Überbelastungen vermieden werden. Es ist wichtig, diese Gruppen zu unterstützen, um
-        einen aktiven und gesunden Lebensstil zu gewährleisten.</p>
+    <p>Die Bedürfnisse älterer Menschen und beeinträchtigter Personen unterscheiden sich häufig von denen jüngerer oder gesunder Personen. Individuelle Trainingspläne helfen dabei, Mobilität, Kraft und Lebensqualität zu fördern, während Verletzungen und Überbelastungen vermieden werden. Es ist wichtig, diese Gruppen zu unterstützen, um einen aktiven und gesunden Lebensstil zu gewährleisten.</p>
 </div>
+
 <div class="container my-" style = "margin-top: 5%; margin-bottom: 5%">
 
     <footer class="text-center text-lg-start border border-white mt-xl-5 pt-4">
