--- a/fitness-and-health-website/trainings-plan-disabled.html
+++ b/fitness-and-health-website/trainings-plan-disabled.html
@@ -51,8 +51,136 @@
 </nav>
 </div>
 
-<header class="hero">
-  <h1>Trainingspläne für Beeinträchtigte</h1>
-</header>
+<div class="container mt-5 pt-5">
+  <!-- Header Section -->
+  <header class="hero text-center">
+    <h1>Trainingspläne für Beeinträchtigte</h1>
+  </header>
+</div>
+
+<!-- Trainingsplan Table -->
+<div class="container my-5">
+  <div class="table-responsive">
+    <table class="table table-dark table-striped m-0">
+      <thead>
+      <tr>
+        <th>Tag</th>
+        <th>Gelenkfreundliches Training</th>
+        <th>Balance-Übungen</th>
+        <th>Leichtes Krafttraining</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr>
+        <td>Montag</td>
+        <td>Sanftes Radfahren (30 Min): Fördert die Gelenkbeweglichkeit und stärkt die Beinmuskulatur.</td>
+        <td>Einbeinstand (3 x 30 Sek.): Trainiert die Stabilität und das Gleichgewicht.</td>
+        <td>Wandliegestütze (3 Sätze à 10-12 Wiederholungen): Leichte Übung für den Oberkörper.</td>
+      </tr>
+      <tr>
+        <td>Dienstag</td>
+        <td>Schwimmen (30 Min): Gelenkfreundlich und schonend für den gesamten Körper.</td>
+        <td>Standwaage (3 x 20 Sek. pro Bein): Stärkt die Balance und das Körperbewusstsein.</td>
+        <td>Hanteln heben (3 Sätze à 12 Wiederholungen): Fördert die Arm- und Schultermuskulatur.</td>
+      </tr>
+      <tr>
+        <td>Mittwoch</td>
+        <td>Spazierengehen (30 Min): Leichte, gelenkschonende Bewegung für alle Fitnesslevel.</td>
+        <td>Beinheben im Stehen (3 x 15 Wiederholungen pro Bein): Fördert die Balance und Beinkraft.</td>
+        <td>Beinpressen (3 Sätze à 10-15 Wiederholungen): Stärkt die Beinmuskulatur ohne große Belastung.</td>
+      </tr>
+      <tr>
+        <td>Donnerstag</td>
+        <td>Yoga (30 Min): Sanfte Dehnübungen zur Verbesserung der Gelenkbeweglichkeit.</td>
+        <td>Balance auf dem Bosu-Ball (3 x 1 Min.): Fördert Koordination und Körperstabilität.</td>
+        <td>Widerstandsbänder (3 Sätze à 12 Wiederholungen): Leichte Kraftübung zur Stabilisierung.</td>
+      </tr>
+      <tr>
+        <td>Freitag</td>
+        <td>Ellipsentrainer (30 Min): Fördert die Ausdauer ohne starke Belastung für die Gelenke.</td>
+        <td>Hocke mit Ausgleich (3 x 10 Wiederholungen): Trainiert Balance und Beinkraft.</td>
+        <td>Kettlebell-Swings (3 Sätze à 12 Wiederholungen): Ganzkörperkräftigung mit geringer Belastung.</td>
+      </tr>
+      <tr>
+        <td>Samstag</td>
+        <td>Radfahren im Freien (30 Min): Belastet die Gelenke wenig, stärkt jedoch die Muskulatur.</td>
+        <td>Seitenplanke (3 x 30 Sek.): Stärkt die seitliche Rumpfmuskulatur und fördert die Balance.</td>
+        <td>Liegestütze auf den Knien (3 Sätze à 10-12 Wiederholungen): Leichte Oberkörperübung.</td>
+      </tr>
+      <tr>
+        <td>Sonntag</td>
+        <td>Stretching (20 Min): Dehnt den Körper sanft und fördert die Beweglichkeit.</td>
+        <td>Einbeinige Kniebeugen (3 x 10 Wiederholungen pro Bein): Fördert Gleichgewicht und Beinmuskulatur.</td>
+        <td>Kurzhantel-Rudern (3 Sätze à 12 Wiederholungen): Kräftigt Rücken und Schultern.</td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+
+
+
+<div class="container my-" style = "margin-top: 5%; margin-bottom: 5%">
+
+  <footer class="text-center text-lg-start border border-white mt-xl-5 pt-4">
+    <!-- Grid container -->
+    <div class="container p-4">
+      <!--Grid row-->
+      <div class="row">
+        <!--Grid column-->
+        <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+          <h5 class="text-uppercase mb-4 text-in-fotter">Unsere Welt</h5>
+
+          <ul class="list-unstyled mb-4">
+            <li>
+              <a href="shop.html" class="text-white hover-effects">Produkte</a>
+            </li>
+            <li>
+              <a href="trainings-plan.html" class="text-white hover-effects">Trainingspläne</a>
+            </li>
+            <li>
+              <a href="nutrition.html" class="text-white hover-effects">Ernährungspläne</a>
+            </li>
+            <li>
+              <a href="about-us.html" class="text-white hover-effects">Über uns</a>
+            </li>
+          </ul>
+        </div>
+        <!--Grid column-->
+
+
+
+        <!--Grid column-->
+        <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+          <h5 class="text-uppercase mb-4 text-in-fotter">Karriere</h5>
+
+          <ul class="list-unstyled">
+            <li>
+              <a href="#!" class="text-white hover-effects">Jobs</a>
+            </li>
+          </ul>
+        </div>
+        <!--Grid column-->
+
+        <!--Grid column-->
+        <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+          <h5 class="text-uppercase mb-4 text-in-fotter">Kontaktiere uns</h5>
+
+          <div class="form-outline form-white mb-4">
+            <a href = "mailto:brunnerjan1102@gmail.com" class = "styleForEmailInMain hover-effects" style = "color: white">Klicke hier</a>
+
+          </div>
+
+        </div>
+        <div class = "col-lg-3 col-md-6 mb-4 mb-lg-0">
+          <img src="icones/new-logo-gredient.png" class = "bg-image hover-overlay ripple shadow-1-strong rounded" style = "width: 50%">
+        </div>
+      </div>
+
+    </div>
+
+  </footer>
+
+</div>
 </body>
 </html>
