--- a/fitness-and-health-website/trainings-plan-old.html
+++ b/fitness-and-health-website/trainings-plan-old.html
@@ -51,8 +51,137 @@
     </div>
 </nav>
 
-<header class="hero">
-    <h1>Trainingspläne für Ältere</h1>
-</header>
+<!-- Header Container -->
+<div class="container mt-5 pt-5">
+    <!-- Header Section -->
+    <header class="hero text-center">
+        <h1>Trainingspläne für Ältere</h1>
+    </header>
+</div>
+
+<!-- Trainingsplan für Stuhlübungen, Mobilitätstraining und Individuelle Anpassungen -->
+<div class="container my-5">
+    <div class="table-responsive">
+        <table class="table table-dark table-striped m-0">
+            <thead>
+            <tr>
+                <th>Tag</th>
+                <th>Stuhlübungen</th>
+                <th>Mobilitätstraining</th>
+                <th>Individuelle Anpassungen</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td>Montag</td>
+                <td>Sanfte Armkreise (3 x 30 Sek. pro Arm): Fördert die Schulterbeweglichkeit ohne Belastung.</td>
+                <td>Beinheben im Sitzen (3 x 15 Wiederholungen pro Bein): Fördert die Hüftgelenkbeweglichkeit.</td>
+                <td>Stuhl-Kniebeugen (3 x 10 Wiederholungen): Eine angepasste Variante der Kniebeuge mit Stuhlhilfe.</td>
+            </tr>
+            <tr>
+                <td>Dienstag</td>
+                <td>Handgelenk-Dehnungen (3 x 30 Sek. pro Hand): Dehnt die Handgelenke und fördert die Beweglichkeit.</td>
+                <td>Seitliche Rumpfbeugen im Sitzen (3 x 15 Wiederholungen): Stärkt die seitliche Rumpfmuskulatur und dehnt die Wirbelsäule.</td>
+                <td>Individuelle Stuhlstütze (3 x 30 Sek.): Anpassung des Stuhls zur Förderung der Rückenstabilität.</td>
+            </tr>
+            <tr>
+                <td>Mittwoch</td>
+                <td>Schulterheben (3 x 15 Wiederholungen): Fördert die Schultermobilität und beugt Verspannungen vor.</td>
+                <td>Fersenheben im Sitzen (3 x 15 Wiederholungen): Stärkt die Wadenmuskulatur und verbessert die Beweglichkeit der Sprunggelenke.</td>
+                <td>Beinrückheben (3 x 12 Wiederholungen pro Bein): Sanfte Übung zur Stärkung der Oberschenkelmuskulatur.</td>
+            </tr>
+            <tr>
+                <td>Donnerstag</td>
+                <td>Hand- und Fingerdehnungen (3 x 30 Sek.): Verbessert die Beweglichkeit der Hände und Finger.</td>
+                <td>Hüftkreisen im Sitzen (3 x 15 Kreise pro Seite): Fördert die Beweglichkeit der Hüftgelenke.</td>
+                <td>Rückenstreckung im Sitzen (3 x 30 Sek.): Fördert die Flexibilität der Wirbelsäule und entlastet den Rücken.</td>
+            </tr>
+            <tr>
+                <td>Freitag</td>
+                <td>Becken kippen im Sitzen (3 x 15 Wiederholungen): Stärkt die Beckenmuskulatur und fördert die Haltung.</td>
+                <td>Knöchelkreisen im Sitzen (3 x 15 Kreise pro Fuß): Verbessert die Flexibilität der Knöchel und stärkt die Gelenke.</td>
+                <td>Individuelle Anpassung der Stuhlhöhe: Fördert eine bessere Körperhaltung und eine ergonomische Sitzposition.</td>
+            </tr>
+            <tr>
+                <td>Samstag</td>
+                <td>Armschwingen im Sitzen (3 x 30 Sek.): Verbessert die Schulterbeweglichkeit und beugt Verspannungen vor.</td>
+                <td>Brustdehnung im Sitzen (3 x 30 Sek.): Fördert die Flexibilität der Brustmuskulatur und verbessert die Körperhaltung.</td>
+                <td>Angepasste Beinübungen: Anpassung der Übungen zur Beinstärkung je nach Mobilitätsgrad.</td>
+            </tr>
+            <tr>
+                <td>Sonntag</td>
+                <td>Sanfte Nackenbewegungen (3 x 15 Wiederholungen): Lindert Verspannungen im Nackenbereich.</td>
+                <td>Hüftdehnung im Sitzen (3 x 30 Sek. pro Seite): Fördert die Beweglichkeit der Hüfte und lindert Verspannungen.</td>
+                <td>Sanfte Mobilisation der Wirbelsäule im Sitzen: Fördert die Flexibilität und Linderung von Rückenbeschwerden.</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
+
+
+<div class="container my-" style = "margin-top: 5%; margin-bottom: 5%">
+
+    <footer class="text-center text-lg-start border border-white mt-xl-5 pt-4">
+        <!-- Grid container -->
+        <div class="container p-4">
+            <!--Grid row-->
+            <div class="row">
+                <!--Grid column-->
+                <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+                    <h5 class="text-uppercase mb-4 text-in-fotter">Unsere Welt</h5>
+
+                    <ul class="list-unstyled mb-4">
+                        <li>
+                            <a href="shop.html" class="text-white hover-effects">Produkte</a>
+                        </li>
+                        <li>
+                            <a href="trainings-plan.html" class="text-white hover-effects">Trainingspläne</a>
+                        </li>
+                        <li>
+                            <a href="nutrition.html" class="text-white hover-effects">Ernährungspläne</a>
+                        </li>
+                        <li>
+                            <a href="about-us.html" class="text-white hover-effects">Über uns</a>
+                        </li>
+                    </ul>
+                </div>
+                <!--Grid column-->
+
+
+
+                <!--Grid column-->
+                <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+                    <h5 class="text-uppercase mb-4 text-in-fotter">Karriere</h5>
+
+                    <ul class="list-unstyled">
+                        <li>
+                            <a href="#!" class="text-white hover-effects">Jobs</a>
+                        </li>
+                    </ul>
+                </div>
+                <!--Grid column-->
+
+                <!--Grid column-->
+                <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+                    <h5 class="text-uppercase mb-4 text-in-fotter">Kontaktiere uns</h5>
+
+                    <div class="form-outline form-white mb-4">
+                        <a href = "mailto:brunnerjan1102@gmail.com" class = "styleForEmailInMain hover-effects" style = "color: white">Klicke hier</a>
+
+                    </div>
+
+                </div>
+                <div class = "col-lg-3 col-md-6 mb-4 mb-lg-0">
+                    <img src="icones/new-logo-gredient.png" class = "bg-image hover-overlay ripple shadow-1-strong rounded" style = "width: 50%">
+                </div>
+            </div>
+
+        </div>
+
+    </footer>
+
+</div>
+
 </body>
 </html>
