fixed the title touching the table/card

--- a/fitness-and-health-website/nutrition.html
+++ b/fitness-and-health-website/nutrition.html
@@ -185,7 +185,7 @@
     <!-- Mobilitätseinschränkungen -->
     <div class="row mb-5 gy-4">
         <div class="col-lg-4 col-md-6 col-12">
-            <h2 class="title">Mobilitätseinschränkungen</h2>
+            <h2 class="title">Mobilitätsprobleme</h2>
             <p class="text-light">Menschen mit Mobilitätseinschränkungen benötigen eine ballaststoffreiche Ernährung, um die Verdauung zu fördern und das Risiko von Verstopfungen zu verringern. Zudem sollte der Fokus auf einer ausreichenden Zufuhr von Nährstoffen wie Eisen, Vitamin D und Kalzium liegen, um Knochen und Gelenke zu stärken.</p>
             <p class="text-light">Empfohlene Lebensmittel: Vollkornprodukte, Hülsenfrüchte, grüne Blattgemüse, mageres Fleisch, Fisch und Milchprodukte. Vermeiden Sie stark verarbeitete Lebensmittel, die oft wenig Nährstoffe enthalten.</p>
         </div>
