changed the fonts on all pages

--- a/fitness-and-health-website/shop.html
+++ b/fitness-and-health-website/shop.html
@@ -101,7 +101,7 @@
                     <h1 class="picture-header">
                         Willkommen
                     </h1>
-                    <h2 class="picture-subheader">
+                    <h2 class="picture-subheader" style = "font-family: sans-serif">
                         Fitness&Health Produkte
                     </h2>
                 </div>
