--- a/fitness-and-health-website/trainings-plan.html
+++ b/fitness-and-health-website/trainings-plan.html
@@ -52,7 +52,7 @@
 <div class="container mt-5 pt-5">
     <!-- Header Section -->
     <header class="hero text-center">
-        <h1>Trainingspläne</h1>
+        <h1 style = "font-family: sans-serif">Trainingspläne</h1>
         <p class="lead">Individuelle Trainingspläne für ältere Menschen und Personen mit Beeinträchtigungen, um Gesundheit und Wohlbefinden zu fördern.</p>
     </header>
 </div>
