deleted all quotes, deleted the header of the text and changed the header of the website itself

--- a/fitness-and-health-website/index.html
+++ b/fitness-and-health-website/index.html
@@ -10,12 +10,11 @@
 
     <title>FitnessAndHealth</title>
 </head>
-<body style = "background-color: black">
+<body style="background-color: black">
 
-<nav class="navbar navbar-expand-lg navbar-dark navbar-fixed" style = "background-color: black">
+<nav class="navbar navbar-expand-lg navbar-dark navbar-fixed" style="background-color: black">
     <div class="container-fluid">
-
-        <img src="icones/new-logo-gredient-no-text.png" alt="Home" width="50" height="50">
+        <img src="icones/new-logo-gredient.png" alt="Home" width="50" height="50">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -51,65 +50,34 @@
     </div>
 </nav>
 
-    <div class="MainPage">
-        <div style =  "margin-bottom: 2%">
-            <h1 class="headLine">Deine Fitnessreise beginnt</h1>
-        </div>
+<div class="MainPage">
+    <div style="margin-bottom: 2%">
+        <h1 class="headLine">Fitness & Health</h1>
+    </div>
 
-        <div class="container quotes position-relative">
-            <div class="row">
-                <h2 class="quote2 set1 col-12">Mindfulness is the key to a healthy mind</h2>
-                <h2 class="quote3 set1 col-12">Love the Pain</h2>
-                <h2 class="quote4 set1 col-12">Discipline equals freedom</h2>
-                <h2 class="quote5 set1 col-12">Fitness is the essence of life</h2>
+    <div class="container mt-0">
+        <div class="pictureContainer">
+            <img src="icones/background.webp" alt="Logo" class="pictureOfMan">
+            <div class="row justify-content-center">
+                <div class="col-md-10 col-lg-8">
 
-                <h2 class="quote2 set2 col-12">Muscle gain is the best medicine</h2>
-                <h2 class="quote3 set2 col-12">Healthy eating is the key to a healthy mind</h2>
-                <h2 class="quote4 set2 col-12">Sweat now, shine later</h2>
-                <h2 class="quote5 set2 col-12">Stay strong, stay motivated, and stay consistent</h2>
-
-                <h2 class="quote2 set3 col-12">Your only limit is you</h2>
-                <h2 class="quote3 set3 col-12">Be yourself, be confident, and be strong</h2>
-                <h2 class="quote4 set3 col-12">Small steps, big changes</h2>
-                <h2 class="quote5 set3 col-12">One more rep, one step closer</h2>
-
-                <h2 class="quote2 set4 col-12">Stay positive, stay focused, and stay energized</h2>
-                <h2 class="quote3 set4 col-12">Don't stop until you're proud</h2>
-                <h2 class="quote4 set4 col-12">Stronger every day</h2>
-                <h2 class="quote5 set4 col-12">Believe in yourself, and you'll achieve great things</h2>
-            </div>
-        </div>
-        <div class="container mt-0">
-            <div class="pictureContainer">
-                <img src="icones/background.webp" alt="Logo" class="pictureOfMan">
-                <div class="row justify-content-center">
-                    <div class="col-md-10 col-lg-8">
-                        <h2 class="text-center mb-4 text-light headerOfText">Unsere Mission</h2>
-                        <p class="text-light textContent">
-                            Diese Webseite ist eine an Menschen mit Altersbeschwerden, Verletzungen und jeglichen behindernden Umständen angepasste Fitnesswebseite.
-                            Fit zu bleiben bei Beeinträchtigungen ist schwer, deswegen stellt diese Webseite leichte, verständnisvolle und gut umsetzbare Trainingspläne bereit.
-                            Nicht nur Trainingspläne auch Ernährungspläne werden für unsere Kunden erstellt. Unsere Pläne sind nicht nur auf schnelle Ergebnisse ausgelegt, sondern auf langfristige, nachhaltige Verbesserungen der körperlichen und mentalen Gesundheit.
-                        </p>
-                    </div>
-
+                    <p class="text-light textContent">
+                        Diese Webseite ist eine an Menschen mit Altersbeschwerden, Verletzungen und jeglichen behindernden Umständen angepasste Fitnesswebseite.
+                        Fit zu bleiben bei Beeinträchtigungen ist schwer, deswegen stellt diese Webseite leichte, verständnisvolle und gut umsetzbare Trainingspläne bereit.
+                        Nicht nur Trainingspläne auch Ernährungspläne werden für unsere Kunden erstellt. Unsere Pläne sind nicht nur auf schnelle Ergebnisse ausgelegt, sondern auf langfristige, nachhaltige Verbesserungen der körperlichen und mentalen Gesundheit.
+                    </p>
                 </div>
             </div>
         </div>
-   </div>
+    </div>
+</div>
 
-
-
-<div class="container my-" style = "margin-top: 5%; margin-bottom: 5%; background-color: black">
-
+<div class="container my-" style="margin-top: 5%; margin-bottom: 5%; background-color: black">
     <footer class="text-center text-lg-start border border-white mt-xl-5 pt-4">
-
         <div class="container p-4">
-
             <div class="row">
-
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
                     <h5 class="text-uppercase mb-4 text-in-fotter">Unsere Welt</h5>
-
                     <ul class="list-unstyled mb-4">
                         <li>
                             <a href="shop.html" class="text-white hover-effects">Produkte</a>
@@ -125,43 +93,26 @@
                         </li>
                     </ul>
                 </div>
-
-
-
-
-
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
                     <h5 class="text-uppercase mb-4 text-in-fotter">Karriere</h5>
-
                     <ul class="list-unstyled">
                         <li>
                             <a href="#!" class="text-white hover-effects">Jobs</a>
                         </li>
                     </ul>
                 </div>
-
-
-
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
                     <h5 class="text-uppercase mb-4 text-in-fotter">Kontaktiere uns</h5>
-
                     <div class="form-outline form-white mb-4">
-                        <a href = "mailto:brunnerjan1102@gmail.com" class = "text-white hover-effects">Klicke hier</a>
-
+                        <a href="mailto:brunnerjan1102@gmail.com" class="text-white hover-effects">Klicke hier</a>
                     </div>
-
                 </div>
-
-                <div class = "col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <img src="icones/new-logo-gredient-no-text.png" class = "bg-image hover-overlay ripple shadow-1-strong rounded" style = "width: 50%">
+                <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+                    <img src="icones/new-logo-gredient.png" class="bg-image hover-overlay ripple shadow-1-strong rounded" style="width: 50%">
                 </div>
             </div>
-
         </div>
-
-
     </footer>
-
 </div>
 
 </body>
