--- a/fitness-and-health-website/index.html
+++ b/fitness-and-health-website/index.html
@@ -10,11 +10,13 @@
 
     <title>FitnessAndHealth</title>
 </head>
-<body style="background-color: black">
+<body style="background-color: #F9F4E6">
 
-<nav class="navbar navbar-expand-lg navbar-dark navbar-fixed" style="background-color: black">
+<nav class="navbar navbar-expand-lg navbar-dark navbar-fixed contrast" >
     <div class="container-fluid">
-        <img src="icones/new-logo-gredient.png" alt="Home" width="50" height="50">
+
+        <img src="icones/logo-green-no-text.png" alt="Home" width="50" height="50">
+
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -22,27 +24,27 @@
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="index.html">
-                        <img src="icones/bxs-home.svg" alt="Shop" width="20" height="20"> Home
+                        <img src="icones/bxs-home.svg" class="changeColor" alt="Shop" width="20" height="20"> Home
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link textInNavBar" href="shop.html">
-                        <img src="icones/bx-shopping-bag.svg" alt="Shop" width="20" height="20"> Produkte
+                    <a class="nav-link textInNavBar"  href="shop.html">
+                        <img src="icones/bx-shopping-bag.svg" class="changeColor" alt="Shop" width="20" height="20"> Produkte
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="nutrition.html">
-                        <img src="icones/bx-baguette.svg" alt="Ernährungspläne" width="20" height="20"> Ernährungspläne
+                        <img src="icones/bx-baguette.svg" class="changeColor" alt="Ernährungspläne" width="20" height="20"> Ernährungspläne
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="trainings-plan.html">
-                        <img src="icones/bx-run.svg" alt="Trainingspläne" width="20" height="20"> Trainingspläne
+                        <img src="icones/bx-run.svg" class="changeColor" alt="Trainingspläne" width="20" height="20"> Trainingspläne
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="about-us.html">
-                        <img src="icones/bxs-group.svg" alt="Über uns" width="20" height="20"> Über uns
+                        <img src="icones/bxs-group.svg"  class="changeColor" alt="Über uns" width="20" height="20"> Über uns
                     </a>
                 </li>
             </ul>
@@ -50,7 +52,7 @@
     </div>
 </nav>
 
-<div class="MainPage">
+<div class="MainPage" style="background-color: #F9F4E6">
     <div style="margin-bottom: 2%">
         <h1 class="headLine">Fitness & Health</h1>
     </div>
@@ -60,8 +62,7 @@
             <img src="icones/background.webp" alt="Logo" class="pictureOfMan">
             <div class="row justify-content-center">
                 <div class="col-md-10 col-lg-8">
-
-                    <p class="text-light textContent">
+                    <p class="textContent text-color">
                         Diese Webseite ist eine an Menschen mit Altersbeschwerden, Verletzungen und jeglichen behindernden Umständen angepasste Fitnesswebseite.
                         Fit zu bleiben bei Beeinträchtigungen ist schwer, deswegen stellt diese Webseite leichte, verständnisvolle und gut umsetzbare Trainingspläne bereit.
                         Nicht nur Trainingspläne auch Ernährungspläne werden für unsere Kunden erstellt. Unsere Pläne sind nicht nur auf schnelle Ergebnisse ausgelegt, sondern auf langfristige, nachhaltige Verbesserungen der körperlichen und mentalen Gesundheit.
@@ -72,47 +73,69 @@
     </div>
 </div>
 
-<div class="container my-" style="margin-top: 5%; margin-bottom: 5%; background-color: black">
-    <footer class="text-center text-lg-start border border-white mt-xl-5 pt-4">
+<div class="container my-" style = "margin-top: 7%; margin-bottom: 5%">
+
+    <footer class="text-center text-lg-start border mt-xl-5 pt-4 contrast" style=" box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
+        <!-- Grid container -->
         <div class="container p-4">
+            <!--Grid row-->
             <div class="row">
+                <!--Grid column-->
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4 text-in-fotter">Unsere Welt</h5>
+                    <h5 class="text-uppercase mb-4 text-in-fotter" style="color: #F6E8D5;">Unsere Welt</h5>
+
                     <ul class="list-unstyled mb-4">
                         <li>
-                            <a href="shop.html" class="text-white hover-effects">Produkte</a>
+                            <a href="shop.html" class="hover-effects" style="color: #ffffff ;">Produkte</a>
                         </li>
                         <li>
-                            <a href="trainings-plan.html" class="text-white hover-effects">Trainingspläne</a>
+                            <a href="trainings-plan.html" class="hover-effects" style="color: #ffffff;">Trainingspläne</a>
                         </li>
                         <li>
-                            <a href="nutrition.html" class="text-white hover-effects">Ernährungspläne</a>
+                            <a href="nutrition.html" class="hover-effects" style="color: #ffffff;">Ernährungspläne</a>
                         </li>
                         <li>
-                            <a href="about-us.html" class="text-white hover-effects">Über uns</a>
+                            <a href="about-us.html" class="hover-effects" style="color: #ffffff;">Über uns</a>
                         </li>
                     </ul>
                 </div>
+                <!--Grid column-->
+
+
+
+                <!--Grid column-->
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
                     <h5 class="text-uppercase mb-4 text-in-fotter">Karriere</h5>
+
                     <ul class="list-unstyled">
                         <li>
                             <a href="#!" class="text-white hover-effects">Jobs</a>
                         </li>
                     </ul>
                 </div>
+                <!--Grid column-->
+
+                <!--Grid column-->
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
                     <h5 class="text-uppercase mb-4 text-in-fotter">Kontaktiere uns</h5>
+
                     <div class="form-outline form-white mb-4">
-                        <a href="mailto:brunnerjan1102@gmail.com" class="text-white hover-effects">Klicke hier</a>
+                        <a href = "mailto:brunnerjan1102@gmail.com" class = "styleForEmailInMain hover-effects" style = "color: white">Klicke hier</a>
+
                     </div>
+
                 </div>
-                <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <img src="icones/new-logo-gredient.png" class="bg-image hover-overlay ripple shadow-1-strong rounded" style="width: 50%">
+                <!--Grid column-->
+                <div class = "col-lg-3 col-md-6 mb-4 mb-lg-0">
+                    <img src="icones/logo-green-no-text.png" class = "bg-image hover-overlay ripple shadow-1-strong rounded" style = "width: 50%">
                 </div>
             </div>
+            <!--Grid row-->
         </div>
+        <!-- Grid container -->
+
     </footer>
+
 </div>
 
 </body>
