--- a/fitness-and-health-website/index.html
+++ b/fitness-and-health-website/index.html
@@ -86,7 +86,42 @@
             </div>
         </div>
     </div>
-
+    <div class="container my-5">
+        <h2 class="text-center mb-4">Einblicke in unser Angebot</h2>
+        <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="icones/leo-pitcture.jpg" class="d-block w-100 rounded" alt="Bild 1">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Individuelles Training</h5>
+                        <p>Passend für jedes Fitnesslevel.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="icones/healthy-food.jpg" class="d-block w-100 rounded" alt="Bild 2">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Gesunde Ernährung</h5>
+                        <p>Lecker und einfach umzusetzen.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="icones/man-trained.jpg" class="d-block w-100 rounded" alt="Bild 3">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Persönlicher Support</h5>
+                        <p>Immer für dich da, wenn du Unterstützung brauchst.</p>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Zurück</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Weiter</span>
+            </button>
+        </div>
+    </div>
 </div>
 
 <div class="container my-" style = "margin-top: 7%; margin-bottom: 5%">
