changed colors of the main page title

--- a/fitness-and-health-website/index.html
+++ b/fitness-and-health-website/index.html
@@ -55,7 +55,7 @@
 <div class="MainPage" style="background-color: #F9F4E6">
     <!-- Hero Section -->
     <section class="hero">
-        <h1 class="display-4">Willkommen bei Fitness & Health</h1>
+        <h1 class="headLine display-4">Willkommen bei Fitness & Health</h1>
         <p class="lead">Individuelle Lösungen für ein besseres Wohlbefinden – egal in welchem Alter.</p>
         <button class="btn btn-primary btn-lg">Starte jetzt</button>
     </section>
